Start functional-level model for FPGA impl

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "[rust]": {
         "editor.inlayHints.enabled": "offUnlessPressed"
-    }
+    },
+    "rust-analyzer.rustfmt.extraArgs": ["+nightly"]
 }
