--- a/rrt/src/fpga/verilog/test/pyproject.toml
+++ b/rrt/src/fpga/verilog/test/pyproject.toml
@@ -2,4 +2,7 @@
 name = "rrt-fpga-verilog-test"
 version = "0.1.0"
 requires-python = ">=3.12"
-dependencies = ["cocotb>=2.0.1", "pytest>=9.0.2"]
+dependencies = [
+    "cocotb>=2.0.1",
+    "pytest>=9.0.2",
+]
